<resources>
    <string name="app_name">Kalvikural Official</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="action_right1">DEPARTMENTAL EXAM MATERIALS</string>
    <string name="action_right2">ALL TIPS</string>
    <string name="action_right3">OLD GO’S COLLECTIONS</string>
    <string name="action_right4">USEFUL SOFTWARE</string>
    <string name="action_right5">ELEMENTARY MATERIALS </string>
    <string name="action_right6">10-PUBLIC QUESTIONS </string>
    <string name="action_right7">12-PUBLIC QUESTIONS</string>
    <string name="action_right8">Blood Bank</string>
    <string name="action_right9">Join Hand</string>
    <string name="action_right10">TN TECHNOLOGY</string>


    <string name="ad_id_banner"> ca-app-pub-3612518059450172/1494349342</string>
    <string name="ad_id_interstitial">ca-app-pub-3612518059450172/2738491710</string>
</resources>
