<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/rightmenu1"
        android:orderInCategory="100"
        android:title="@string/action_right1"
        app:showAsAction="never" />
    <item
        android:id="@+id/rightmenu2"
        android:orderInCategory="100"
        android:title="@string/action_right2"
        app:showAsAction="never" />
    <item
        android:id="@+id/rightmenu3"
        android:orderInCategory="100"
        android:title="@string/action_right3"
        app:showAsAction="never" />
    <item
        android:id="@+id/rightmenu4"
        android:orderInCategory="100"
        android:title="@string/action_right4"
        app:showAsAction="never" />
    <item
        android:id="@+id/rightmenu5"
        android:orderInCategory="100"
        android:title="@string/action_right5"
        app:showAsAction="never" />
    <item
        android:id="@+id/rightmenu6"
        android:orderInCategory="100"
        android:title="@string/action_right6"
        app:showAsAction="never" />
    <item
        android:id="@+id/rightmenu7"
        android:orderInCategory="100"
        android:title="@string/action_right7"
        app:showAsAction="never" />
</menu>
